# rguest-tools-rs

./: Cargo.toml  LICENSE  README.md
librguest/: Cargo.toml
librguest/src/: extract.rs  lib.rs  prelude.rs
librguest/src/auth/: login.rs  mod.rs  role.rs  tenant.rs
librguest/src/common/: concept.rs  daypart.rs  location.rs  menu.rs  mod.rs
rguest-cli/: Cargo.toml
rguest-cli/src/: error.rs  main.rs  prompt.rs
rguest-web/: Cargo.toml
rguest-web/src/: main.rs
src/: auth.rs  extract.rs  main.rs  prompt.rs
src/api/: mod.rs
src/api/auth/: context.rs  mod.rs  role.rs  tenant.rs
src/api/common/: daypart.rs  location.rs  menu.rs  mod.rs
