[package]
name = "rguest_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"] }

rpassword = "7.2.0"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

tokio = { version = "1.32", features = ["full"] }
bytes = "1.4"
