[package]
name = "rguest_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "blocking", "cookies", "gzip"] }
reqwest_cookie_store = "0.6.0"
lazy_static = "1"
rpassword = "7.2.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.32", features = ["io-std", "macros"] }
bytes = "1.4"
async-trait = "0.1"
anyhow = "1"
colored = "2"
time = "0.3"
