[package]
name = "librguest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }

async-trait = "0.1"
anyhow = "1"
time = { version = "0.3", features = ["parsing"] }
